@@ -422,6 +422,7 @@
  * 20121222.8 (2.5.0-dev)  Add dav_join_error()
  * 20121222.9 (2.5.0-dev)  Add conn_sense_e
  * 20121222.10 (2.5.0-dev) Add cache_control_t.invalidated
+ * 20121222.11 (2.5.0-dev) Add ap_find_etag_weak(), ap_find_etag_strong()
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
@@ -429,7 +430,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20121222
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 10                  /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 11                  /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
